force-app/main/default/objects/Account/fields/c2g__DaysSalesOutstanding__c.field-meta.xml
<CustomField>
    <fullName>c2g__DaysSalesOutstanding__c</fullName>
    <description>Average number of days it takes to collect payment after a sale has been made, based on the sales and payments made in the last 365 days. The value in this field is automatically calculated.</description>
    <inlineHelpText>Average number of days it takes to collect payment after a sale has been made, based on the sales and payments made in the last 365 days. The value in this field is automatically calculated.</inlineHelpText>
    <label>Days Sales Outstanding (Annual)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>