force-app/main/default/objects/Account/fields/Channel_Territory__c.field-meta.xml
<CustomField>
    <fullName>Channel_Territory__c</fullName>
    <label>Channel Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1: United States, United Kingdom, Ireland, Middle East</fullName>
            </value>
            <value>
                <fullName>T2: Canada, Nordics, Benelux, DACH, South Europe</fullName>
            </value>
            <value>
                <fullName>T3: Rest of the World</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>