force-app/main/default/objects/Account/fields/Customer_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Credit Hold</label>
    <type>Checkbox</type>
</CustomField>