force-app/main/default/objects/Account/fields/DB_Address__c.field-meta.xml
<CustomField>
    <fullName>DB_Address__c</fullName>
    <label>D&amp;B Address</label>
    <type>Address</type>
</CustomField>