force-app/main/default/objects/Account/fields/DB_Block_Id__c.field-meta.xml
<CustomField>
    <fullName>DB_Block_Id__c</fullName>
    <label>D&amp;B Block Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>