force-app/main/default/objects/Account/fields/DB_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>DB_Block_Reason__c</fullName>
    <label>D&amp;B Block Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>