force-app/main/default/objects/Account/fields/DB_Block_Status__c.field-meta.xml
<CustomField>
    <fullName>DB_Block_Status__c</fullName>
    <label>D&amp;B Block Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>