force-app/main/default/objects/Account/fields/DB_Certified_Email__c.field-meta.xml
<CustomField>
    <fullName>DB_Certified_Email__c</fullName>
    <label>D&amp;B Certified Email</label>
    <type>Email</type>
</CustomField>