force-app/main/default/objects/Account/fields/DB_Code__c.field-meta.xml
<CustomField>
    <fullName>DB_Code__c</fullName>
    <label>D&amp;B Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>