force-app/main/default/objects/Account/fields/DB_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>DB_Default_Currency__c</fullName>
    <label>D&amp;B Default Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>