force-app/main/default/objects/Account/fields/DB_Domestic_Ultimate_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DB_Domestic_Ultimate_DUNS__c</fullName>
    <label>D&amp;B Domestic Ultimate DUNS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>