force-app/main/default/objects/Account/fields/DB_Domestic_Ultimate_Name__c.field-meta.xml
<CustomField>
    <fullName>DB_Domestic_Ultimate_Name__c</fullName>
    <label>D&amp;B Domestic Ultimate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>