force-app/main/default/objects/Account/fields/DB_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS__c</fullName>
    <externalId>true</externalId>
    <label>D&amp;B DUNS</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>