force-app/main/default/objects/Account/fields/DB_Enriched__c.field-meta.xml
<CustomField>
    <fullName>DB_Enriched__c</fullName>
    <label>D&amp;B Enriched</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>Not Enriched</fullName>
                <default>true</default>
                <label>Not Enriched</label>
            </value>
            <value>
                <fullName>Failed Enrichment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>