force-app/main/default/objects/Account/fields/DB_Family_Tree_Role__c.field-meta.xml
<CustomField>
    <fullName>DB_Family_Tree_Role__c</fullName>
    <label>D&amp;B Family Tree Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>