force-app/main/default/objects/Account/fields/DB_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>DB_Fiscal_Year_End__c</fullName>
    <label>D&amp;B Fiscal Year End</label>
    <type>Date</type>
</CustomField>