force-app/main/default/objects/Account/fields/DB_Fortune_1000__c.field-meta.xml
<CustomField>
    <fullName>DB_Fortune_1000__c</fullName>
    <label>D&amp;B Fortune 1000</label>
    <length>100</length>
    <type>Text</type>
</CustomField>