force-app/main/default/objects/Account/fields/DB_Incorporated_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_Incorporated_Date__c</fullName>
    <label>D&amp;B Incorporated Date</label>
    <type>Date</type>
</CustomField>