force-app/main/default/objects/Account/fields/DB_Industry__c.field-meta.xml
<CustomField>
    <fullName>DB_Industry__c</fullName>
    <label>D&amp;B Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>