force-app/main/default/objects/Account/fields/DB_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>DB_Number_of_Employees__c</fullName>
    <label>D&amp;B Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>