force-app/main/default/objects/Account/fields/DB_Number_of_Employees_Scope__c.field-meta.xml
<CustomField>
    <fullName>DB_Number_of_Employees_Scope__c</fullName>
    <label>D&amp;B Number of Employees Scope</label>
    <length>100</length>
    <type>Text</type>
</CustomField>