force-app/main/default/objects/Account/fields/DB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_Start_Date__c</fullName>
    <label>D&amp;B Start Date</label>
    <type>Date</type>
</CustomField>