force-app/main/default/objects/Account/fields/DB_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_Telephone_Number__c</fullName>
    <label>D&amp;B Telephone Number</label>
    <type>Phone</type>
</CustomField>