force-app/main/default/objects/Account/fields/DB_Website__c.field-meta.xml
<CustomField>
    <fullName>DB_Website__c</fullName>
    <label>D&amp;B Website</label>
    <type>Url</type>
</CustomField>