force-app/main/default/objects/Account/fields/DB_Yearly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DB_Yearly_Revenue__c</fullName>
    <label>D&amp;B Yearly Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>