force-app/main/default/objects/Account/fields/DB_Yearly_Revenue_Currency__c.field-meta.xml
<CustomField>
    <fullName>DB_Yearly_Revenue_Currency__c</fullName>
    <label>D&amp;B Yearly Revenue Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>