force-app/main/default/objects/Account/fields/Defensive_Security__c.field-meta.xml
<CustomField>
    <fullName>Defensive_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defensive Security</label>
    <type>Checkbox</type>
</CustomField>