force-app/main/default/objects/Account/fields/Direct_or_Indirect_Partner__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Indirect_Partner__c</fullName>
    <label>Direct or Indirect Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Direct &amp; Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>