force-app/main/default/objects/Account/fields/Enrolled_Partner_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Partner_Program_Name__c</fullName>
    <label>Enrolled Partner Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>