force-app/main/default/objects/Account/fields/Enterprise_AE__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_AE__c</fullName>
    <label>Enterprise AE</label>
    <length>36</length>
    <type>Text</type>
</CustomField>