force-app/main/default/objects/Account/fields/ffbf__AccountParticulars__c.field-meta.xml
<CustomField>
    <fullName>ffbf__AccountParticulars__c</fullName>
    <label>Account Particulars</label>
    <length>12</length>
    <type>Text</type>
</CustomField>