force-app/main/default/objects/Account/fields/ffbf__PaymentCode__c.field-meta.xml
<CustomField>
    <fullName>ffbf__PaymentCode__c</fullName>
    <label>Payment Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>