force-app/main/default/objects/Account/fields/fferpcore__TaxCode1__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first SUT tax code for this account.</description>
    <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
    <label>Tax Code 1</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
    <relationshipName>AccountsTC1</relationshipName>
    <type>Lookup</type>
</CustomField>