force-app/main/default/objects/Account/fields/fferpcore__TaxCode3__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The third SUT tax code for this account.</description>
    <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
    <label>Tax Code 3</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
    <relationshipName>AccountsTC3</relationshipName>
    <type>Lookup</type>
</CustomField>