force-app/main/default/objects/Account/fields/fferpcore__TaxCountryCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCountryCode__c</fullName>
    <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
    <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
    <label>Tax Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>fferpcore__TaxCountryCode</valueSetName>
    </valueSet>
</CustomField>