force-app/main/default/objects/Account/fields/fferpcore__ValidatedShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
    <description>Shipping address street validated by the external tax calculation service.</description>
    <label>Validated Shipping Street</label>
    <type>TextArea</type>
</CustomField>