force-app/main/default/objects/Account/fields/fferpcore__VatStatus__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VatStatus__c</fullName>
    <description>The tax status for this account for VAT/GST accounts.</description>
    <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>EC Non-registered</fullName>
            </value>
            <value>
                <fullName>EC Registered</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>