force-app/main/default/objects/Account/fields/Fortra_IDP_ID__c.field-meta.xml
<CustomField>
    <fullName>Fortra_IDP_ID__c</fullName>
    <externalId>true</externalId>
    <label>Fortra IDP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>