force-app/main/default/objects/Account/fields/GS_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>GS_CustomerID__c</fullName>
    <label>GS CustomerID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>