force-app/main/default/objects/Account/fields/Hold_Collection_Letters__c.field-meta.xml
<CustomField>
    <fullName>Hold_Collection_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Collection Letters</label>
    <type>Checkbox</type>
</CustomField>