force-app/main/default/objects/Account/fields/Hold_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Hold_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Invoices</label>
    <type>Checkbox</type>
</CustomField>