force-app/main/default/objects/Account/fields/hs_company_id__c.field-meta.xml
<CustomField>
    <fullName>hs_company_id__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Company Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>