force-app/main/default/objects/Account/fields/is_Enrolled_Partner__c.field-meta.xml
<CustomField>
    <fullName>is_Enrolled_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Enrolled Partner</label>
    <type>Checkbox</type>
</CustomField>