force-app/main/default/objects/Account/fields/Last_Sales_Activity_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Age__c</fullName>
    <label>Last Sales Activity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>