force-app/main/default/objects/Account/fields/Legacy_Sync_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sync_Correlation_Id__c</fullName>
    <label>Legacy Sync Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>