force-app/main/default/objects/Account/fields/Legacy_Sync_Payload__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sync_Payload__c</fullName>
    <label>Legacy Sync Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>