force-app/main/default/objects/Account/fields/Managed_File_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Managed_File_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed File Transfer</label>
    <type>Checkbox</type>
</CustomField>