force-app/main/default/objects/Account/fields/Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms__c</fullName>
    <label>Net Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Net_1</fullName>
            </value>
            <value>
                <fullName>Net_10</fullName>
            </value>
            <value>
                <fullName>Net_12</fullName>
            </value>
            <value>
                <fullName>Net_15</fullName>
            </value>
            <value>
                <fullName>Net_24</fullName>
            </value>
            <value>
                <fullName>Net_30</fullName>
            </value>
            <value>
                <fullName>Net_45</fullName>
            </value>
            <value>
                <fullName>Net_60</fullName>
            </value>
            <value>
                <fullName>Net_75</fullName>
            </value>
            <value>
                <fullName>Net_90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>