force-app/main/default/objects/Account/fields/Offensive_Security__c.field-meta.xml
<CustomField>
    <fullName>Offensive_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offensive Security</label>
    <type>Checkbox</type>
</CustomField>