force-app/main/default/objects/Account/fields/Partner_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Partner_Business_Model__c</fullName>
    <label>Partner Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>MSSP</fullName>
            </value>
            <value>
                <fullName>Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Technology Alliance</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Purchasing Agent</fullName>
            </value>
            <value>
                <fullName>Indirect Reseller</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
                <isActive>false</isActive>
                <label>Alliance</label>
            </value>
            <value>
                <fullName>Technology</fullName>
                <isActive>false</isActive>
                <label>Technology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>