force-app/main/default/objects/Account/fields/Partner_Program_Contract_ARR_Value_Commi__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Contract_ARR_Value_Commi__c</fullName>
    <description>Used in partner management &amp; to determine future status of a partnership</description>
    <label>Partner Program Contract ARR Value/Commi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>