force-app/main/default/objects/Account/fields/Partner_Program_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Contract_Start_Date__c</fullName>
    <label>Partner Program Contract Start Date</label>
    <type>Date</type>
</CustomField>